# emergence

./: Cargo.toml  README.md
benches/: note_search.rs
src/: data.rs  lib.rs  main.rs  style.css  views.rs
src/data/: explain.rs  export.rs  functions.rs  layer.rs  notes.rs  query.rs  search.rs  setup.rs  subjects.rs  tfidf.rs
src/data/layer/: test.rs
src/views/: confirm_dialog.rs  editor.rs  journal.rs  list_notes.rs  markdown.rs  note_input.rs  scroll_to.rs  search_view.rs  select_subject.rs  side_panel.rs  similar_notes.rs  view_note.rs
