[package]
name = "emergence"
version = "0.0.1"
edition = "2021"
description = "Takes notes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.11", features = ["derive"] }
const_format = "0.2.31"

dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "f652474a6e163a1ce543d83da02367cbfd88a193" }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "f652474a6e163a1ce543d83da02367cbfd88a193" }
dioxus-signals = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "f652474a6e163a1ce543d83da02367cbfd88a193" }

rusqlite = { version = "0.29.0", features = ["bundled", "chrono", "functions", "uuid"] }
smallvec = "1.11.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.0", features = ["v4", "serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

markdown = "1.0.0-alpha"
tokio = { version = "1.29.1", features = ["sync"] }
lipsum = "0.9.0"
rand = "0.8.5"
itertools = "0.11.0"
tantivy = "0.20.2"
sir = { version = "0.4.0", features = ["dioxus"] }
ahash = "0.8.3"

[patch.crates-io]
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "f652474a6e163a1ce543d83da02367cbfd88a193" }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "f652474a6e163a1ce543d83da02367cbfd88a193" }

[dev-dependencies]
criterion = "0.4"
tempfile = "3.6.0"

[[bench]]
name = "note_search"
harness = false

[package.metadata.bundle]
name = "Emergence"
identifier = "com.emergence.notes"
version = "0.0.1"
copyright = ""
category = "Developer Tool"
short_description = "Takes notes"
long_description = """
Takes notes
"""
